--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         <activity
             android:name=".activities.ReminderPreviewActivity"
             android:label="@string/title_activity_reminder_preview"
+            android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity"/>
         </activity>
     </application>
 
